# grading-pdf

./: .gitignore  Dockerfile  README.md  Usage.md  docker-compose.yml  monitor_queue.sh  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: config.py  main.py  models.py  worker.py
app/api/: routes.py
app/services/: pdf_parser.py
k8s/: cluster-issuer.yaml  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  redis.yaml  service.yaml
scripts/: start.sh  start_worker.py
tests/: test_integration.py  test_pdf_parser.py
